--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   application:
     name: ERPSystem
 
@@ -12,3 +16,6 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+server:
+  tomcat:
+    max-swallow-size: 100MB
